--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="row flex-row wrap">
       <div class="bucket img1 center">집 이사하기</div>
       <div class="bucket img2 center">프로필 사진 찍기</div>
-      <div class="bucket img2 center">자바,  공부하기</div>
+      <div class="bucket img2 center">자바, 파이썬 공부하기</div>
       <div class="bucket img1 center">스페인어 공부하기</div>
       <div class="bucket img1 center">건강하게 먹기</div>
       <div class="bucket img2 center">매일 헬스장 가기</div>
